--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Page#index</h1>
-<p>Find me in app/views/page/index.html.erb</p>
+<link rel="stylesheet" title="Default" href="{{ url('public/highlight/styles/vs.css') }}" />
+<script type="text/javascript" src="{{ url('public/highlight/highlight.pack.js') }}"></script>
+<script type="text/javascript">
+hljs.initHighlightingOnLoad();
+</script>
+
+<section id="content" class="markdown">
+	{% if page_info %}
+	{{ page_info | raw }}
+	{% endif %}
+</section>
+
+{% if logged_in %}
+{% include "_comments.html" %}
+{% endif %}
