add login, better bootstrap

--- a/app/views/page/_comments.html.erb
+++ b/app/views/page/_comments.html.erb
@@ -1,6 +1,6 @@
 <section id="comments">
 
-	<script type="text/javascript" charset="utf-8" src="{{ url('public/js/comments.js') }}"></script>
+	<script type="text/javascript" charset="utf-8" src="public/js/comments.js"></script>
 
 	<div class="modal hide" id="delete_comment">
 		<div class="modal-header">
