--- a/app/assets/stylesheets/vakkensite.css
+++ b/app/assets/stylesheets/vakkensite.css
@@ -5,204 +5,47 @@ html, body
 
 body
 {
-	/* 40px to make the container go all the way to the bottom of the topbar */
-	padding-top: 40px;
+	/* to make the container go all the way to the bottom of the topbar */
+	padding-top: 60px;
 }
-
-header, section, footer
-{
-    width: 940px;
-    margin-left: auto;
-    margin-right: auto;
-    *zoom: 1;
-}
-
-header:after, section:after, footer:before, header:after, section:after, footer:after {
-    display: table;
-    content: "";
-}
-header:after, section:after, footer:after {
-    clear: both;
-}
-
 
 /****************************************************************************
  *  main navigation bar
  *
-*/
-
-.navbar .container
-{
-    width:940px;
-}
-
-.navbar .dropdown-menu
-{
-	max-width:none;
-}
+ */
 
 .navbar .brand
 {
-	spadding:7px 20px 9px 20px;
 	color: #59ceff;
 	text-shadow: 0px 2px 0px red;
 	font-family: "Helvetica Neue", "Arial", sans-serif;
 	font-weight: bold;
-}
-
-.navbar .brand img
-{
-	height:22px;
-}
-
-.navbar .icon-white
-{
-    opacity:0.5;
-}
-
-.navbar .nav > li > a:hover > .icon-white
-{
-    opacity:1;
-}
-
-.dropdown:hover i, .open.dropdown i {
-	opacity: 1;
-	filter: alpha(opacity=100);
-}
-
-/****************************************************************************
- *  masthead
- *
-*/
-
-#masthead
-{
-	position:relative;
-	background-color: #ffc20e;
-	padding:20px 20px;
-	margin:0 -20px;
-	border-bottom:0;
-}
-
-#masthead h1
-{
-	color:#333;
-}
-
-#masthead h1 small
-{
-	color:#333;
-	text-shadow:none;
-}
-
-#masthead #done
-{
-	position:absolute;
-	bottom:10px;
-	right:20px;
-}
-
-/****************************************************************************
- *  video player
- *
-*/
-
-#video
-{
-	padding:0 20px;
-	margin:0 -20px;
-    background-color:black;
-    position:relative;
-}
-
-#video #player
-{
-    margin:0 auto;
-    display:block;
-}
-
-#video .close
-{
-    position:absolute;
-    top:10px;
-    right:10px;
-    color:white;
-	line-height:10px;
+    margin-left:0;
+    padding-top:7px;
+    margin:0;
 }
 
 /****************************************************************************
  *  sub navigation bar
  *
-*/
-
-#subnav
-{
-	margin-bottom:0;
-}
-
-#subnav .navbar-inner
-{
-	padding:0 0px;
-	margin:0 -20px;
-
-    background-color:#ffc20e;
-    background-image: -webkit-linear-gradient(top, #ffc20e 30%, #CF9C0A 100%);
-	background-image: -moz-linear-gradient(top, #ffc20e 30%, #CF9C0A 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc20e', endColorstr='#CF9C0A', GradientType=0);
-
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    -webkit-box-shadow:none;
-    sborder-top:1px solid #D7A00C;
-}
-
-#subnav .container
-{
-	width:auto;
-}
-
-#subnav .navbar-inner .nav > li > a
-{
-    color:black;
-    text-shadow:none;
-}
-
-#subnav .navbar-inner .nav > .active > a, #subnav .navbar-inner  .nav > li > a:hover
-{
-    background-color:#ffc20e;
-}
+ */
 
 #links
 {
-	font-size:9pt;
-}
-
-#links li a
-{
-	overflow:hidden;
-	text-overflow:ellipsis;
-	white-space:nowrap;
-}
-
-#links li a:hover
-{
-	color:white;
-	text-shadow:none;
-	background-color:#565565;
+    background-color:#eee;
+    margin-bottom:0;
+    margin-left:-1px;
 }
 
 /****************************************************************************
  *  main content area, divided into rows
  *
-*/
+ */
 
 section
 {
 	/* The white background content wrapper */
 	background-color: #fff;
-	padding:30px 20px;
-	/* negative indent the amount of the padding to maintain the grid system */
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
 	box-shadow: 0 1px 2px rgba(0,0,0,.15);
@@ -218,9 +61,10 @@ section + section
 section:last-of-type
 {
     margin-bottom:10px;
-	-webkit-border-radius: 0 0 6px 6px;
-	-moz-border-radius: 0 0 6px 6px;
-	border-radius: 0 0 6px 6px;
+/*  -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
+*/
 }
 
 section > .row + .row
@@ -236,12 +80,11 @@ section > .row + .row
 
 section h1, section small
 {
-    text-indent:-120px;
+/*    margin-left:-120px;*/
 }
 
 section h1, section h2, section h3
 {
-    stext-indent:-120px;
     margin-bottom:1em;
     margin-top:20px;
 }
@@ -256,10 +99,9 @@ section h4
     margin-bottom:20px;
 }
 
-section.markdown
+section h1, section h2, section h3
 {
-    width:620px;
-    padding:30px 180px;
+    line-height:1em;
 }
 
 blockquote
@@ -274,9 +116,31 @@ blockquote p
 	margin: inherit;
 }
 
+table.course-items th:first-child, table.course-items td:first-child
+{
+	width:20px;
+	text-align:center;
+}
+
+.table input[type=text]
+{
+	margin-bottom:0;
+}
+
+/****************************************************************************
+ *  any markdown
+ *
+ */
+
+.markdown
+{
+    padding:30px;
+}
+
 .markdown p, .markdown li, .markdown dl
 {
     -webkit-hyphens:auto;
+    hyphens:auto;
     -moz-hyphens:none;
     font-family:Georgia;
     line-height:1.5;
@@ -302,21 +166,10 @@ blockquote p
 	padding: 0.5em 2em;
 }
 
-table.course-items th:first-child, table.course-items td:first-child
-{
-	width:20px;
-	text-align:center;
-}
-
-.table input[type=text]
-{
-	margin-bottom:0;
-}
-
 /****************************************************************************
  *  footer
  *
-*/
+ */
 
 footer
 {
@@ -502,7 +355,7 @@ footer small
 	right:0;
 	top:40px;
 	bottom:0;
-	width:600px;
+    width:600px;
 	background-color:white;
 	padding:5px;
 	box-shadow:0px 2px 2px #888;
@@ -610,48 +463,4 @@ footer small
         box-shadow:none;
         background-image:none;
     }
-}
-
-/*
- *   table styles copied from bootstrap
- */
- 
-table {
-  width: 100%;
-  margin-bottom: 18px;
-}
-table th, table td {
-  padding: 8px;
-  line-height: 18px;
-  text-align: left;
-  vertical-align: top;
-  border-top: 1px solid #ddd;
-}
-table th {
-  font-weight: bold;
-  background-color:#f6f6f6;
-}
-table thead th {
-  vertical-align: bottom;
-}
-table thead:first-child tr th, table thead:first-child tr td {
-  border-top: 0;
-}
-table tbody + tbody {
-  border-top: 2px solid #ddd;
-}
-
-table {
-  border: 1px solid #ddd;
-  border-collapse: separate;
-  *border-collapse: collapsed;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-table th + th,
-table td + td,
-table th + td,
-table td + th {
-  border-left: 1px solid #ddd;
 }
