--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,24 @@
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
 	<div class="navbar-inner">
-		<nav class="container">
-			<a class="brand" href="{{ url('') }}">{{ site_name }}</a>
+		<div class="container">
+
+		  	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </a>
+		
+			<a class="brand" href="/">minprog</a>
+
+			<div class="nav-collapse collapse">
+	      	
 			<ul class="nav">
 				<% for section in Section.all %>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= section.title %> <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<% for page in section.pages %>
-						<li><a href="{{ page_url(page.id) }}"><%= page.title %></a></li>
+						<li><%= link_to page.title, "/#{section.slug}/#{page.slug}" %></li>
 						<% end %>
 					</ul>
 				<% end %>
@@ -16,15 +26,15 @@
 			</ul>
 
 			<ul class="nav pull-right">
-				{% if logged_in %}
-				{% if page_editable and admin %}
+				<% if @user # logged_in %>
+				<% if false # page editable and admin %>
 				<li>
 					<a href="#" onclick="editpage(); return(false);"><i class="icon-edit icon-white"></i> Edit</a>
 				</li>
-				{% endif %}
+				<% end %>
 				<li class="dropdown">
 
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> {{ username[0] }} {{ username[1] }}</a>
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <%= @user.uvanetid %></a>
 					<ul class="dropdown-menu" style="min-width:200px;">
 						<li style="padding:6px 10px; background-color:white; margin-bottom:0;">
 							<div class="progress" style="margin-bottom:0;">
@@ -36,13 +46,13 @@
 						<li><a href="{{ url('auth/logout') }}">Sign out</a></li>
 					</ul>
 				</li>
-				{% else %}
-				<li><a href="{{ url('auth/login') }}"><i class="icon-user icon-white"></i> Sign in</a></li>
-				{% endif %}
+				<% else %>
+				<li><%= link_to("<i class='icon-user icon-white'></i> Sign in".html_safe, RubyCAS::Filter.login_url(controller))%></li>
+				<% end %>
 			</ul>
-
-
-
-		</nav>
+			
+			</div>
+			
+		</div>
 	</div>
 </div>
