--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-static-top">
 	<div class="navbar-inner">
-		<div class="container">
+		<!-- <div class="container"> -->
 
 		  	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 		        <span class="icon-bar"></span>
@@ -53,6 +53,6 @@
 			
 			</div>
 			
-		</div>
+		<!-- </div> -->
 	</div>
 </div>
