--- a/app/assets/stylesheets/vakkensite.css
+++ b/app/assets/stylesheets/vakkensite.css
@@ -16,7 +16,7 @@ body
 
 .navbar
 {
-    margin-bottom:2em;
+/*    margin-bottom:2em;*/
 }
 
 .navbar .brand
@@ -37,9 +37,7 @@ body
 
 #links
 {
-    background-color:#eee;
     margin-bottom:0;
-    margin-left:-1px;
 }
 
 /****************************************************************************
@@ -97,6 +95,17 @@ section h1, section h2, section h3
 section h1
 {
 	line-height:1em;
+	font-size:2em;
+}
+
+section h2
+{
+    font-size:1.5em;
+}
+
+section h3
+{
+    font-size:1em;
 }
 
 section h4
@@ -139,7 +148,7 @@ table.course-items th:first-child, table.course-items td:first-child
 
 .markdown
 {
-    padding:30px;
+/*    padding:30px;*/
 }
 
 .markdown p, .markdown li, .markdown dl
@@ -269,6 +278,7 @@ footer small
  *
 */
 
+/*
 #posts input, textarea {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -291,7 +301,7 @@ footer small
   outline: 0;
   outline: thin dotted \9;
 }
-
+*/
 .comment-form
 {
 	padding:0px;
