--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -5,6 +5,8 @@
 			<section id="content" style="padding:1em;">
 
 				<div class="tabbable">
+					
+					<p id="loading" class="pull-right" style="display:none;"><i class="icon-fire"></i> saving</p>
 
 					<ul id="links" class="nav nav-tabs">
 						<% @page.subpages.each_with_index do |subpage, index| %>
@@ -12,15 +14,71 @@
 							<a href="#<%= subpage.slug %>" data-toggle="tab"><%= subpage.title %></a>
 						</li>
 						<% end %>
+						<% if @page.needs_submit? %>
+						<li><a href="#submit" data-toggle="tab">Submit</a></li>
+						<% end %>
 					</ul>
 
+					<%= form_tag '/answers.json', :id => "page_form", :remote => true do %>
+					<%= hidden_field_tag :page_id, @page.id %>
 					<div class="tab-content">
 						<% @page.subpages.each_with_index do |subpage, index| %>
 						<div class="tab-pane markdown <%= 'active' if index == 0 %>" id="<%= subpage.slug %>">
-							<%= markdown(subpage.content) %>
+							<%= markdown(subpage.content, @page) %>
+						</div>
+						<% end %>
+						<% if @page.needs_submit? %>
+						<div class="tab-pane markdown" id="submit">
+							<h1>Submit</h1>
+							<table class="table">
+								<tr>
+									<th></th>
+									<th>filename</th>
+									<th>required?</th>
+									<th></th>
+								</tr>
+								<% if @page.form %>
+								<tr>
+									<td></td>
+									<td>form.txt</td>
+									<td>yes</td>
+									<td></td>
+								</tr>
+								<% end %>
+								<% @page.page_submissions.each do |s| %>
+								<tr>
+									<td><i class="icon-thumbs-up"></i></td>
+									<td><%= s.filename %></td>
+									<td><%= 'yes' if s.required %></td>
+									<td><input type="file"></td>
+								</tr>
+								<% end %>
+							</table>
+							<p>Notes: <textarea></textarea></p>
+							<p><button class="btn btn-warning">Submit for grading</button></p>
 						</div>
 						<% end %>
 					</div>
+					<% end %>
+					
+					<script>
+						var form_cache = <%= @answer_data.to_json.html_safe %>;
+						$.each($("input, textarea"),
+							function(i,v)
+							{
+								if(form_cache[v.name])
+								{
+									v.value = form_cache[v.name];
+								}
+							}
+						);
+						$("input,textarea").change(function()
+						{
+							$("#loading").show();
+							$("#page_form").submit();
+							window.setTimeout(function(){$("#loading").hide()}, 1000);
+						})
+					</script>
 
 				</div>
 
