finally a working custom bootstrap

--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap.min";
+
 html, body
 {
 	background-color: #eee;
@@ -507,3 +509,5 @@ footer small
         background-image:none;
     }
 }
+
+@import "bootstrap-responsive";
