--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -9,7 +9,7 @@ html, body
 body
 {
 	/* to make the container go all the way to the bottom of the topbar */
-/*  padding-top: 60px;*/
+    padding-top: 40px;
 }
 
 /****************************************************************************
