--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,10 @@
 			</ul>
 
 			<ul class="nav pull-right">
-				<% if @user # logged_in %>
+				<% if logged_in? %>
+				<li><p class="navbar-text" id="loading" style="display:none;"><i class="icon-fire icon-white"></i> Saving</p></li>
+
+				<li class="divider-vertical"></li>
 				<li class="dropdown">
 
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <%= @user.uvanetid %></a>
@@ -36,7 +39,9 @@
 							</div>
 						</li>
 						<li class="divider"></li>
+						<% if is_admin? %>
 						<li><a href="#myModal" data-toggle="modal" data-backdrop="static">Update courseware...</a></li>
+						<% end %>
 						<li><%= link_to 'Logout', :controller => 'homepage', :action => 'logout' %></li>
 					</ul>
 				</li>
