--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,20 +6,18 @@
 
 				<div class="tabbable">
 					
-					<p id="loading" class="pull-right" style="display:none;"><i class="icon-fire"></i> saving</p>
-
 					<ul id="links" class="nav nav-tabs">
 						<% @page.subpages.each_with_index do |subpage, index| %>
 						<li class="<%= 'active' if index == 0 %>">
 							<a href="#<%= subpage.slug %>" data-toggle="tab"><%= subpage.title %></a>
 						</li>
 						<% end %>
-						<% if @page.needs_submit? %>
+						<% if logged_in? && @page.needs_submit? %>
 						<li><a href="#submit" data-toggle="tab">Submit</a></li>
 						<% end %>
 					</ul>
 
-					<%= form_tag '/answers.json', :id => "page_form", :remote => true do %>
+					<%= form_tag({ :controller => 'upload', :action => 'submit' }, { :multipart => true, :id => "page_form" }) do %>
 					<%= hidden_field_tag :page_id, @page.id %>
 					<div class="tab-content">
 						<% @page.subpages.each_with_index do |subpage, index| %>
@@ -27,58 +25,61 @@
 							<%= markdown(subpage.content, @page) %>
 						</div>
 						<% end %>
-						<% if @page.needs_submit? %>
+						<% if logged_in? && @page.needs_submit? %>
 						<div class="tab-pane markdown" id="submit">
 							<h1>Submit</h1>
 							<table class="table">
 								<tr>
-									<th></th>
 									<th>filename</th>
-									<th>required?</th>
+									<th></th>
 									<th></th>
 								</tr>
 								<% if @page.form %>
 								<tr>
-									<td></td>
 									<td>form.txt</td>
-									<td>yes</td>
+									<td>Automatically generated from your answers on this page.</td>
 									<td></td>
 								</tr>
 								<% end %>
 								<% @page.page_submissions.each do |s| %>
 								<tr>
-									<td><i class="icon-thumbs-up"></i></td>
 									<td><%= s.filename %></td>
-									<td><%= 'yes' if s.required %></td>
-									<td><input type="file"></td>
+									<td><%= file_field_tag "f[#{s.filename}]", :accept => File.extname(s.filename) %></td>
+									<td><%= 'required' if s.required %></td>
 								</tr>
 								<% end %>
 							</table>
-							<p>Notes: <textarea></textarea></p>
-							<p><button class="btn btn-warning">Submit for grading</button></p>
+							<p>Notes: <%= text_area_tag 'notes' %></p>
+							<p><%= submit_tag 'Submit for grading', :confirm => 'question?', :class => 'btn btn-warning' %></p>
 						</div>
 						<% end %>
 					</div>
 					<% end %>
 					
+					<% if logged_in? %>
 					<script>
 						var form_cache = <%= @answer_data.to_json.html_safe %>;
-						$.each($("input, textarea"),
-							function(i,v)
-							{
-								if(form_cache[v.name])
+						if(form_cache)
+						{
+							$.each($("input[type=text], textarea"),
+								function(i,v)
 								{
-									v.value = form_cache[v.name];
+									if(form_cache[v.name])
+									{
+										v.value = form_cache[v.name];
+									}
 								}
-							}
-						);
-						$("input,textarea").change(function()
+							);
+						}
+						$("input[type=text],textarea").change(function()
 						{
 							$("#loading").show();
-							$("#page_form").submit();
+							// $("#page_form").submit();
+							$.post("/answers.json", $("#page_form").serialize());
 							window.setTimeout(function(){$("#loading").hide()}, 1000);
 						})
 					</script>
+					<% end %>
 
 				</div>
 
