--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 		</a>
 
-		<a class="brand" href="/">minprog</a>
+		<a class="brand" href="/"><%= Course.course['short'] %></a>
 
 		<div class="nav-collapse collapse">
 
