--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
 
 			<ul class="nav">
 				<% for section in Section.all %>
-				<li class="dropdown active">
+				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= section.title %> <b class="caret"></b></a>
 					<ul class="dropdown-menu" role="menu">
 						<% for page in section.pages %>
