--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -28,16 +28,15 @@
 						<% if logged_in? && @page.needs_submit? %>
 						<div class="tab-pane markdown" id="submit">
 							<h1>Submit</h1>
-							<table class="table">
-								<tr>
-									<th>filename</th>
-									<th></th>
-									<th></th>
-								</tr>
+							<% if @page.form %>
+							<p>When you are ready to submit, make sure you have answered all questions, use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>							<% else %>
+							<p>When you are ready to submit, please use the form below to select all required files, enter a note and press the Submit button. If you do not select all required files, you cannot submit.</p>
+							<% end %>
+							<table class="table table-bordered">
 								<% if @page.form %>
 								<tr>
 									<td>form.txt</td>
-									<td>Automatically generated from your answers on this page.</td>
+									<td>Automatically generated from your answers.</td>
 									<td></td>
 								</tr>
 								<% end %>
