--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -145,7 +145,7 @@ table.table-padded td, table.table-padded th
 /*    padding-left: ;*/
 }
 
-table.table-padded tr td:last-child
+table.table-padded tr:last-child td
 {
     padding-bottom:1em;
 }
