better header style

--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -38,6 +38,7 @@ body
 	font-family: "Helvetica Neue", "Arial", sans-serif;
 	font-weight: bold;
 	margin-left:0;
+	padding:0.5em;
 	padding-top:8px;
 	margin:0;
 }
@@ -52,21 +53,20 @@ body
 	margin-bottom:0 ! important;
 }
 
-.tabbable ul.nav li:first-child
+.tabbable
 {
-	margin-left:0.75em;
+	max-width:768px;
+	margin:1em auto;
 }
 
-.gradient-header
+.tabbable .nav
 {
-	background: -moz-linear-gradient(top, rgba(255,255,255,0.8) 0%, rgba(0,0,0,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.8)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(0,0,0,0) 100%); /* IE10+ */
-	background: linear-gradient(to bottom, rgba(255,255,255,0.8) 0%,rgba(0,0,0,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccffffff', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
-	
+	margin-bottom:0;
+}
+
+.tabbable .nav li:first-child
+{
+	margin-left:0.75em;
 }
 
 /****************************************************************************
@@ -79,11 +79,6 @@ h1
 	font-size:2em;
 	padding:1em 0.25em;
 	margin:0 auto;
-}
-
-.nav
-{
-	margin-bottom:0;
 }
 
 section
